--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@ button { padding: 8px; margin: 5px 0; }
 <body>
 
 <h2>📁 Documents</h2>
+  
+<h3>📁 choisir le fichier à uploader</h3>  
 
 <input type="file" id="fileInput">
 <button onclick="upload()">Uploader</button>
 
+<h3>📁 liste des fichiers disponibles</h3>
 <ul id="list"></ul>
 
 <script>
