--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Drive Public App</title>
+<link rel="stylesheet" href="style.css">
 <style>
 body { font-family: Arial; max-width: 600px; margin: auto; }
 button { padding: 8px; margin: 5px 0; }
