--- a/page.html
+++ b/page.html
@@ -10,21 +10,23 @@ button { padding: 8px; margin: 5px 0; }
 </style>
 </head>
 <body>
+   <p>ici il vous est possible de télécharger les fichiers disponibles</p>
+   <p>ou d'en rajouter d'autres</p>
 
-<div class="app">
-  <h2>📁 Documents</h2>
-  <div class="col1">
-    <h3>📁 choisir le fichier à uploader</h3>  
-  
-    <input type="file" id="fileInput">
-    <button onclick="upload()">Uploader</button>
-  </div>  
-  <div class="col1">  
-  
-    <h3>📁 liste des fichiers disponibles</h3>
-    <ul id="list"></ul>
-  </div>
+  <div class="app">
+    <div class="col1">
+      <h3>📁 choisir le fichier à uploader</h3>  
+    
+      <input type="file" id="fileInput">
+      <button onclick="upload()">Uploader</button>
+    </div>  
+    <div class="col1">  
+    
+      <h3>📁 liste des fichiers disponibles</h3>
+      <ul id="list"></ul>
+    </div>
 </div>
+  
 <script>
 const API_URL = "https://script.google.com/macros/s/AKfycbwX1fl3Y4mJT9y2kWlsFrnqL6wbP_-X2soYLtmikPcHOTMRlW1oT5s4-oPx51amsAg8/exec";
 
