--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Drive Public App</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style2.css">
 <style>
 body { font-family: Arial; max-width: 600px; margin: auto; }
 button { padding: 8px; margin: 5px 0; }
