--- a/page2.html
+++ b/page2.html
@@ -20,7 +20,7 @@ button { padding: 8px; margin: 5px 0; }
       <input type="file" id="fileInput">
       <button onclick="upload()">Uploader</button>
     </div>  
-    <div class="col1">  
+    <div class="col1" id = "div-list">  
     
       <h3>📁 liste des fichiers disponibles</h3>
       <ul id="list"></ul>
